2001-02-13  Alexandre Oliva  <aoliva@redhat.com>

	* combine.c (UWIDE_SHIFT_LEFT_BY_BITS_PER_WORD): New macro.
	(try_combine): Use it.

2001-02-13  Richard Henderson  <rth@redhat.com>

	* sparc.md (cmp_cc_arith_op_set): Don't use match_dup on the
	entire operator; replicate that and match_dup the operands.
	(cmp_ccx_arith_op_set): Likewise.
	(cmp_cc_arith_op_not_set): Likewise.
	(cmp_ccx_arith_op_not_set): Likewise.

2001-02-12  Jakub Jelinek  <jakub@redhat.com>

	* c-common.c (constant_fits_type_p): New function.
	(convert_and_check): Use it.

2001-02-11  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (GXX_ABI_FLAG): Don't define.
	* configure.in (--enable-new-gxx-abi): Remove option.
	* config.in: Regenerated.
	* configure: Likewise.

2001-02-12  Alexandre Oliva  <aoliva@redhat.com>

	* lcm.c (compute_earliest): Let EXIT_BLOCK be handled as a regular
	basic block.
	(optimize_mode_switching) [NORMAL_MODE]: Set up EXIT_BLOCK as a
	regular basic block, and arrange for all edges into it to switch
	to normal mode.

2001-02-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* Makefile.in (distclean): Do not remove .gdbinit.

2001-02-11  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (gcc.o): Fix typos.
	(protize.o): Likewise.
	(unprotoize.o): Likewise.

2001-02-11  Richard Henderson  <rth@redhat.com>

	* tree.c (build1): Check for null operand in last change.

2001-02-11  Richard Henderson  <rth@redhat.com>

	* fold-const.c (split_tree): Don't assume a constant isn't splittable.
	(fold): Don't assume a constant isn't foldable.
	* tree.c (build): Set TREE_CONSTANT for an expression with no
	side-effects and constant operands.
	(build1): Likewise.

2001-02-10  Richard Henderson  <rth@redhat.com>

	* jump.c (squeeze_notes): Revert 2000-05-12 change.

2001-02-10  Anthony Green  <green@redhat.com>

	* cpp.texi (Standard Predefined): Add documentation for
	__OPTIMIZE_SIZE__.

	* c-common.c (combine_strings): Improve warning message.
